# DracPDF

./: .gitignore  LICENSE  PLAN.md  README.md  pyproject.toml
docs/: index.html  updates.json
scripts/: benchmark_visor.py  construir_exe.py  construir_instalador.py  dracpdf.iss  dracpdf_launcher.py  generar_certificado.py  generar_iconos.py  publicar_release.py  verificar_anotaciones.py  verificar_conversiones.py  verificar_firma.py  verificar_firma_digital.py  verificar_formulario.py  verificar_herramientas.py  verificar_visor.py
src/lectorpdf/: __init__.py  recursos.py
src/lectorpdf/adapters/pdf2docx/: __init__.py  pdf_a_docx.py
src/lectorpdf/adapters/pyhanko/: signature_service.py
src/lectorpdf/adapters/pymupdf/: anotaciones.py  (+10 more)
src/lectorpdf/ui/: about_dialog.py  app.py  banda_firmado.py  estado_vacio.py  instancia_unica.py  main_window.py  propiedades_dialog.py  recientes.py  tareas.py  vista_documento.py
tests/: test_generar_iconos.py  test_publicar_release.py
tests/adapters/: certificado_prueba.py  conftest.py  generar_fixtures.py  generar_fixtures_docx.py  generar_fixtures_formularios.py  test_actualizador_http.py  test_anotaciones.py  test_bloqueo_firmado.py  test_conversor_html.py  test_conversor_markdown.py  test_conversor_word.py  test_form_historial.py  test_historial.py  test_pyhanko_firma.py  test_pyhanko_verificacion.py  test_pymupdf_contenido.py  test_pymupdf_estampado.py  test_pymupdf_form_escritura.py  test_pymupdf_form_service.py  test_pymupdf_herramientas.py  test_pymupdf_repository.py  test_registro.py
tests/core/: fakes.py  test_abrir_documento.py  test_buscar_en_documento.py  test_comprimir_pdf.py  test_comprobar_actualizacion.py  test_conversiones.py  test_desproteger_pdf.py  test_dividir_pdf.py  test_estampar_firma.py  test_exportar.py  test_firmar_digitalmente.py  test_guardar_formulario.py  test_historial_formulario.py  test_listar_campos.py  test_obtener_enlaces.py  test_obtener_indice.py  test_obtener_palabras.py  test_organizar_paginas.py  test_proteger_pdf.py  test_rellenar_campo.py  test_renderizar_pagina.py  test_unir_pdf.py  test_verificar_firmas.py
tests/ui/: conftest.py  test_about_y_marca.py  test_actualizacion_ui.py  test_barra_busqueda.py  test_barra_titulo.py  test_biblioteca_firmas.py  test_busqueda_layer.py  test_cache_lru.py  test_control_pagina.py  test_control_zoom.py  test_controlador_actualizacion.py  test_conversion_word_dialog.py  test_conversor_word_a_pdf.py  test_coordenadas.py  test_dialogos_tema.py  test_digital_seal_layer.py  test_enlaces_layer.py  test_estado_vacio.py  test_estilos.py  test_form_layer.py  test_icono_ventana.py  test_iconos.py  test_imagen.py  test_impresion.py  test_instancia_unica.py  test_inventario_acciones.py  test_main_window.py  test_menus.py  test_outline_panel.py  test_overlay_tema.py  test_pantallas_tema.py  test_persistencia_ajustes.py  test_pestanas.py  test_placement_item.py  test_propiedades_dialog.py  test_rangos.py  test_recientes.py  test_seleccion.py  test_seleccion_layer.py  test_signature_canvas.py  (+12 more)
(+112 files in other folders)
