[project]
name = "lectorpdf"
version = "0.1.0"
description = "Visor de PDF con firma y rellenado de formularios (arquitectura hexagonal)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyside6>=6.7",
    "pymupdf>=1.24",
    "pyhanko>=0.25",
]

[project.scripts]
lectorpdf = "lectorpdf.ui.app:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    "mypy>=1.11",
    "pre-commit>=3.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lectorpdf"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
filterwarnings = [
    # Overload deprecado de QMouseEvent usado al sintetizar eventos en tests.
    "ignore:.*QMouseEvent.*:DeprecationWarning",
]

[tool.ruff]
line-length = 100
src = ["src", "tests"]
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = "src"
packages = ["lectorpdf"]

# Los adaptadores dependen de librerías sin type stubs completos.
[[tool.mypy.overrides]]
module = ["fitz", "fitz.*"]
ignore_missing_imports = true
