[project]
name = "lectorpdf"
version = "0.1.0"
description = "DracPDF — visor de PDF con rellenado de formularios y firma digital"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Marc Mayol", email = "marcmayolorell@gmail.com" }]
license = { text = "Proprietary (all rights reserved). See LICENSE." }
classifiers = [
    "License :: Other/Proprietary License",
    "Private :: Do Not Upload",
]
dependencies = [
    "pyside6>=6.7",
    "pymupdf>=1.24",
    "pyhanko>=0.25",
    "pdf2docx>=0.5.13",
]

[project.scripts]
lectorpdf = "lectorpdf.ui.app:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    "mypy>=1.11",
    "pre-commit>=3.8",
    "pyinstaller>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lectorpdf"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
filterwarnings = [
    # Overload deprecado de QMouseEvent usado al sintetizar eventos en tests.
    "ignore:.*QMouseEvent.*:DeprecationWarning",
]

[tool.ruff]
line-length = 100
src = ["src", "tests"]
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = "src"
packages = ["lectorpdf"]

# Los adaptadores dependen de librerías sin type stubs completos.
[[tool.mypy.overrides]]
module = [
    "fitz",
    "fitz.*",
    "pyhanko.*",
    "pyhanko_certvalidator.*",
    "asn1crypto.*",
    "pdf2docx",
    "pdf2docx.*",
    "mammoth",
    "docx",
    "docx.*",
]
ignore_missing_imports = true
# pyHanko trae tipos parciales; lo tratamos como no tipado para no arrastrar sus
# firmas incompletas a nuestro código estricto.
follow_imports = "skip"
